--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -1,9 +1,9 @@
-$topnav-background-color: green;
+$topnav-background-color: forestgreen;
 
 :host {
     .navbar {
         background-color: $topnav-background-color;
-        height: 30px;
+        height: 40px;
         color: #999;
         .navbar-brand {
             color: #999;
