--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,5 +1,4 @@
 <nav [ngClass]="{ sidebarPushRight: isActive, collapsed: collapsed }" class="sidebar">
-
     <table mat-table [dataSource]="dataSource" matSortActive="percentageOfProfit" matSort matSortDirection="desc" #positionSort="matSort"  style="width: 100%; overflow: auto;">
         <!-- <ng-container matColumnDef="index">
           <mat-header-cell *matHeaderCellDef> Index </mat-header-cell>
@@ -12,6 +11,7 @@
                             [indeterminate]="selection.hasValue() && !isAllSelected()"
                             [aria-label]="checkboxLabel()">
               </mat-checkbox>
+              <button color="primary" mat-mini-fab>Exit</button>
             </th>
             <td mat-cell *matCellDef="let row">
               <mat-checkbox (click)="$event.stopPropagation()"
@@ -61,16 +61,17 @@
 
 
           <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef> Action  </th>
+            <th mat-header-cell *matHeaderCellDef> Action   </th>
             <td mat-cell *matCellDef="let element">
-                <button  mat-mini-fab color="primary"> <mat-icon>visibility</mat-icon></button>
-                <button  mat-mini-fab color="primary">Swap </button>
-                <button mat-mini-fab (click)="addStopLoss(item.scripCode,item.ltp,item.OrderType,item.netQty)"  mat-button color="primary"> SL</button>
-                <button mat-mini-fab (click)="addStopLoss(item)"  mat-button color="primary"> Add</button>
-                <button (click)="trailStopLossOrder(item)"  mat-mini-fab color="primary"> Sub.</button>
+                <!-- <button  mat-mini-fab color="primary"> <mat-icon>visibility</mat-icon></button>
+                <button  mat-mini-fab color="primary">Swap </button> -->
+                <button mat-mini-fab (click)="addStopLoss(element.scripCode,element.ltp,element.OrderType,element.netQty)"  mat-button color="primary"> SL</button>
+                <button (click)="trailStopLossOrderFromPosition(element)"  mat-mini-fab color="primary"> Trail</button>
+                <!-- <button mat-mini-fab   mat-button color="primary"> Add</button>
+                <button  mat-button mat-mini-fab color="primary"> Sub.</button> -->
 
 
-                <button (click)="exitPosition(item)" mat-mini-fab color="primary"> <mat-icon>close</mat-icon></button>
+                <button (click)="exitPosition(element)" mat-mini-fab color="primary"> <mat-icon>close</mat-icon></button>
 
             </td>
           </ng-container>
@@ -80,7 +81,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
 
       </table>
-      <table mat-table [dataSource]="dataSourceOrder" matSortActive="brokerOrderTime" matSort matSortDirection="desc" #orderSort="matSort" style="width: 100%; overflow: auto;">
+      <table mat-table [dataSource]="dataSourceOrder" matSortActive="brokerOrderTime" matSort matSortDirection="desc" #orderSort="matSort" style="width: 100%; max-height: 500px;overflow: auto;">
         <!-- <ng-container matColumnDef="index">
           <mat-header-cell *matHeaderCellDef> Index </mat-header-cell>
           <mat-cell *matCellDef="let element; let i = index;">{{i}}</mat-cell>
@@ -104,10 +105,16 @@
                 {{element.pendingQty}} | {{element.qty}}
             </td>
           </ng-container>
-          <ng-container matColumnDef="slTriggerRate">
-            <th mat-header-cell *matHeaderCellDef  mat-sort-header>SlTriggerRate </th>
+          <ng-container matColumnDef="rate">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header>Rate </th>
             <td mat-cell *matCellDef="let element">
-                {{element.rate}} | {{element.slTriggerRate}}
+                {{element.rate}}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="slTriggerRate">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header>SL </th>
+            <td mat-cell *matCellDef="let element">
+                {{element.slTriggerRate}}
             </td>
           </ng-container>
         <ng-container matColumnDef="brokerOrderTime">
@@ -124,7 +131,7 @@
           </ng-container>
           <ng-container matColumnDef="reason">
             <th mat-header-cell *matHeaderCellDef  mat-sort-header>Reason </th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element" style="width: 190px">
                {{element.reason}}
             </td>
           </ng-container>
@@ -132,9 +139,12 @@
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> Action  </th>
             <td mat-cell *matCellDef="let element">
-                <button (click)="trailStopLossOrder(item)"  mat-mini-fab color="primary">Trail</button>
-                <button (click)="ModifyOrderRequest(item)"  mat-mini-fab color="primary"> <mat-icon>edit</mat-icon></button>
-                <button (click)="CancelOrderRequest(item)" mat-mini-fab color="primary"> <mat-icon>close</mat-icon></button>
+
+                <!-- <button (click)="ModifyStopLossOrder(element)"  mat-mini-fab color="primary">Trail</button> -->
+
+                <!-- <button (click)="trailStopLossOrder(element)"  mat-mini-fab color="primary">Trail</button> -->
+                <button (click)="ModifyOrderRequest(element)"  mat-mini-fab color="primary"> <mat-icon>edit</mat-icon></button>
+                <button (click)="CancelOrderRequest(element)" mat-mini-fab color="primary"> <mat-icon>close</mat-icon></button>
             </td>
           </ng-container>
 
@@ -142,9 +152,8 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumnsOrders"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsOrders;" ></tr>
       </table>
-
     <div (click)="toggleCollapsed()" [ngClass]="{ collapsed: collapsed }" class="toggle-button">
         <i class="fa fa-fw fa-angle-double-{{ collapsed ? 'right' : 'left' }}"></i>&nbsp;
     </div>
-    <button (click)="playAudio()" >play</button>
+
 </nav>
