--- a/src/app/layout/watchlist/watchlist.component.html
+++ b/src/app/layout/watchlist/watchlist.component.html
@@ -2,6 +2,8 @@
 <mat-tab-group [selectedIndex]="tabNumber"
 (selectedTabChange)="onTabChange($event)" backgroundColor="accent">
   <mat-tab *ngFor="let tab of tabs; let index = index" [label]="tab">
+<h3> <button mat-mini-fab color="success">{{totalShareinPositive}}  </button>    <button mat-mini-fab color="warn" > {{50 - totalShareinPositive}}</button> </h3>
+
     <table mat-table [dataSource]="dataSource" matSortActive="chgPcnt" matSort matSortDirection="desc"  style="height: 550px;width: 100%; overflow: auto;">
       <!-- <ng-container matColumnDef="index">
         <mat-header-cell *matHeaderCellDef> Index </mat-header-cell>
@@ -14,9 +16,9 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="high">
+      <ng-container matColumnDef="high" >
           <th mat-header-cell *matHeaderCellDef mat-sort-header >Day High </th>
-          <td mat-cell *matCellDef="let element">
+          <td mat-cell *matCellDef="let element" [ngClass]="element.high == element.lastRate ? 'make-green' : ''">
               {{element.high}}
           </td>
         </ng-container>
@@ -54,7 +56,7 @@
         <ng-container matColumnDef="buy">
           <th mat-header-cell *matHeaderCellDef> Buy  </th>
           <td mat-cell *matCellDef="let element">
-            <!-- <button mat-button color="success" (click)="buy(element)">Buy</button> -->
+            <!-- <button  color="success" (click)="buy(element)">Buy</button> -->
             <button mat-mini-fab color="success"  (click)="buy(element)"> Buy</button>
 
           </td>
@@ -85,7 +87,6 @@
 
   </mat-tab>
 </mat-tab-group>
-<h3> <button mat-mini-fab color="success">{{totalShareinPositive}}  </button>    <button mat-mini-fab color="warn" > {{50 - totalShareinPositive}}</button> </h3>
 <!-- <mat-spinner [diameter]="diameter"></mat-spinner> -->
 
 
