--- a/src/app/layout/watchlist/watchlist.component.html
+++ b/src/app/layout/watchlist/watchlist.component.html
@@ -2,9 +2,7 @@
 <mat-tab-group [selectedIndex]="tabNumber"
 (selectedTabChange)="onTabChange($event)" backgroundColor="accent">
   <mat-tab *ngFor="let tab of tabs; let index = index" [label]="tab">
-<h3> <button mat-mini-fab color="success">{{totalShareinPositive}}  </button>    <button mat-mini-fab color="warn" > {{50 - totalShareinPositive}}</button> </h3>
-
-    <table mat-table [dataSource]="dataSource" matSortActive="chgPcnt" matSort matSortDirection="desc"  style="height: 550px;width: 100%; overflow: auto;">
+    <table mat-table [dataSource]="dataSource"  matSort matSortActive="chgPcnt" matSortDirection="desc" class="mat-table-background">
       <!-- <ng-container matColumnDef="index">
         <mat-header-cell *matHeaderCellDef> Index </mat-header-cell>
         <mat-cell *matCellDef="let element; let i = index;">{{i}}</mat-cell>
@@ -17,23 +15,23 @@
       </ng-container>
 
       <ng-container matColumnDef="high" >
-          <th mat-header-cell *matHeaderCellDef mat-sort-header >Day High </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> High -  <span style="background-color: green;">{{totalShareinPositive}}</span></th>
           <td mat-cell *matCellDef="let element" [ngClass]="element.high == element.lastRate ? 'make-green' : ''">
               {{element.high}}
           </td>
         </ng-container>
         <ng-container matColumnDef="low">
-          <th mat-header-cell *matHeaderCellDef  mat-sort-header>Day low </th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header> Low  <span style="background-color: red;">{{totalShareinNegative}}</span></th>
+          <td mat-cell *matCellDef="let element" [ngClass]="element.low == element.lastRate ? 'make-red' : ''">
               {{element.low}}
           </td>
         </ng-container>
-        <ng-container matColumnDef="pClose">
+        <!-- <ng-container matColumnDef="pClose">
           <th mat-header-cell *matHeaderCellDef  mat-sort-header>PClose </th>
           <td mat-cell *matCellDef="let element">
               {{element.pClose}}
           </td>
-        </ng-container>
+        </ng-container> -->
       <ng-container matColumnDef="lastRate">
         <th mat-header-cell *matHeaderCellDef  mat-sort-header>Last Rate </th>
         <td mat-cell *matCellDef="let element">
@@ -46,18 +44,18 @@
              <b> {{element.chgPcnt | number}} </b>
           </td>
         </ng-container>
-        <ng-container matColumnDef="chg">
+        <!-- <ng-container matColumnDef="chg">
           <th mat-header-cell mat-sort-header *matHeaderCellDef>ChgPoint</th>
           <td mat-cell *matCellDef="let element">
             {{element.chg}}
           </td>
-        </ng-container>
+        </ng-container> -->
 
         <ng-container matColumnDef="buy">
           <th mat-header-cell *matHeaderCellDef> Buy  </th>
           <td mat-cell *matCellDef="let element">
             <!-- <button  color="success" (click)="buy(element)">Buy</button> -->
-            <button mat-mini-fab color="success"  (click)="buy(element)"> Buy</button>
+            <button  class="small make-green" color="success"  (click)="buy(element)"> Buy</button>
 
           </td>
         </ng-container>
@@ -66,18 +64,18 @@
           <th mat-header-cell *matHeaderCellDef> Sell  </th>
           <td mat-cell *matCellDef="let element">
             <!-- <button mat-button color="warn" (click)="sell(element)">Sell</button> -->
-            <button mat-mini-fab color="warn"  (click)="sell(element)">Sell</button>
+            <button class="small make-red" color="warn"  (click)="sell(element)">Sell</button>
 
           </td>
         </ng-container>
         <ng-container matColumnDef="view">
             <th mat-header-cell *matHeaderCellDef> Details  </th>
             <td mat-cell *matCellDef="let element">
-              <button  mat-mini-fab color="primary"  (click)="openTempDialog(element)"> <mat-icon>visibility</mat-icon></button>
+              <button  class="small" color="primary"  (click)="openTempDialog(element)"> View</button>
             </td>
           </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" ></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns" ></tr>
 
     </table>
     <!-- <mat-paginator [pageSizeOptions]="[10, 20, 50]"  [pageSize]="50"
